Se entró proyecto anterior. Se van a aplicar media queries

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       
 
-      <!--<div class="flex-container">-->
+      <div class="flex-container2">
         <h2>Una solución para cada tipo de empresa</h2>
 
         <div class="grid-container-blog">
@@ -85,6 +85,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis amet et a quam omnis, animi velit tenetur, optio magnam fugiat perspiciatis voluptate sed impedit maxime corrupti hic minus officiis ratione.</p>
           </div>
         </div>
+      </div>
 
       <!--
       <div class='blog'>
